# McpServers

./: .gitignore  CREDENTIAL_MANAGEMENT_ANALYSIS.md  CodeAssistUpgrade.md  Directory.Packages.props  FILE_IO_CONSOLIDATION_ANALYSIS.md  HTTP-TO-MCP-CONVERSION-PLAN.md  MCP_SERVERS_ARCHITECTURAL_REVIEW.md  MONGODB_CONSOLIDATION_RESULTS.md  McpServers.slnx  MiniAgent.md  README.md  SHARED_LIBRARIES_PHASE1_COMPLETE.md  SHARED_LIBRARIES_PHASE2_COMPLETE.md  SHARED_LIBRARIES_PHASE3_ANALYSIS.md  SHARED_LIBRARIES_PHASE4_ANALYSIS.md  SHARED_LIBRARIES_PHASE4_RESULTS.md  SHARED_LIBRARIES_PLAN.md  appsettings.json  trim-descriptions.md
AwsMcp/: .gitignore  AwsMcp.csproj  Program.cs  QUICKSTART.md  README.md  appsettings.json
AwsServer/: AwsServer.csproj  AwsServer.http  Program.cs  REGISTRY_INTEGRATION.md  appsettings.json
AzureMcp/: AzureMcp.csproj  Program.cs  README.md  appsettings.Development.json  appsettings.json  entra-auth.example.json
AzureServer/: AzureServer.csproj  AzureServer.http  ENTRA-AUTH-CONFIG.md  Program.cs
CSharpAnalyzer/: CSharpAnalyzer.csproj  CSharpAnalyzer.http  Program.cs
CSharpAnalyzerMcp/: Program.cs  (+1 more)
python-analyzer-mcp/: .gitignore  HTTP_API.md  INSTALL.md  README.md  http_server.py  pyproject.toml  requirements.txt  run-http-server.bat  run.bat  run.sh  test.py
python-analyzer-mcp/src/: __init__.py  main.py
python-analyzer-mcp/src/models/: __init__.py  code_metrics.py  diagnostic_info.py  symbol_info.py
python-analyzer-mcp/src/services/: __init__.py  python_analyzer.py
python-analyzer-mcp/src/tools/: __init__.py  python_tools.py
(+2819 files in other folders)
