[project]
name = "python-analyzer-mcp"
version = "1.0.0"
description = "MCP server that exposes Python code analysis capabilities"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pylint>=3.0.0",
    "pyflakes>=3.1.0",
    "mypy>=1.7.0",
    "astroid>=3.0.0",
    "black>=23.11.0",
    "autopep8>=2.0.4",
    "radon>=6.0.1",
    "mccabe>=0.7.0",
    "vulture>=2.10",
    "jedi>=0.19.1",
    "typing-extensions>=4.8.0",
]

[project.scripts]
python-analyzer-mcp = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.main]
py-version = "3.8"
ignore-patterns = ["test_.*?.py"]

[tool.pylint.messages_control]
max-line-length = 100
